@@ -78,7 +78,7 @@
   <h2 class="unnumbered">Introducing Emacspeak</h2>
 
   <p>Copyright
-  &Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&copy;
+  ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â©
   2003, 2005, 2006 Robert J. Chassell</p>
 
   <p>In this essay, I suggest how to introduce Emacspeak to someone
