@@ -9,7 +9,7 @@
 
   <title>A Simple Introduction to Emacspeak</title>
   <meta http-equiv="Content-Type" content=
-  "text/html; charset=us-ascii" />
+  "text/html; charset=utf-8" />
   <meta name="generator" content="Org-mode" />
   <meta name="generated" content="2011-03-29 20:24:43 PDT" />
   <meta name="author" content="Alex Midence" />
@@ -433,7 +433,7 @@
           for no monetary compensation can get is for someone to
           use that resource thereby making their time and efforts
           worthwhile. "Hint hint
-          &Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&brvbar;
+          ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¦
           nudge, nudge, know what I mean?" Please tell me you know
           Monty Python! Ok, enough rabbit trails.</p>
 
@@ -1082,12 +1082,12 @@
                   <td class="left">Buffer</td>
 
                   <td class="left">
-                  &Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Acirc;&brvbar;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&acirc;&euro;&oelig;</td>
+                  ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦ÃƒÂ¢Ã¢â€šÂ¬Ã…â€œ</td>
 
                   <td class="left">c-e B</td>
 
                   <td class="left">
-                  &Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Acirc;&brvbar;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&acirc;&euro;&oelig;</td>
+                  ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦ÃƒÂ¢Ã¢â€šÂ¬Ã…â€œ</td>
                 </tr>
 
                 <tr>
@@ -1114,24 +1114,24 @@
                   <td class="left">word</td>
 
                   <td class="left">
-                  &Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Acirc;&brvbar;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&acirc;&euro;&oelig;</td>
+                  ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦ÃƒÂ¢Ã¢â€šÂ¬Ã…â€œ</td>
 
                   <td class="left">c-e w</td>
 
                   <td class="left">
-                  &Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Acirc;&brvbar;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&acirc;&euro;&oelig;</td>
+                  ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦ÃƒÂ¢Ã¢â€šÂ¬Ã…â€œ</td>
                 </tr>
 
                 <tr>
                   <td class="left">Char</td>
 
                   <td class="left">
-                  &Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Acirc;&brvbar;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&acirc;&euro;&oelig;</td>
+                  ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦ÃƒÂ¢Ã¢â€šÂ¬Ã…â€œ</td>
 
                   <td class="left">c-e c</td>
 
                   <td class="left">
-                  &Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Acirc;&brvbar;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&acirc;&euro;&oelig;</td>
+                  ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦ÃƒÂ¢Ã¢â€šÂ¬Ã…â€œ</td>
                 </tr>
               </tbody>
             </table>
@@ -2810,7 +2810,7 @@ return 0;  //  We end our program.
         minor modifications to sentence structure were made to fit
         into this tutorial as a whole but, I've changed as little
         as I could of his original content. Thanks,
-        Dave!&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;Alex
+        Dave!ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬Alex
         Midence</p>
 
         <p>First things first, using dired mode to browse and
@@ -3116,7 +3116,7 @@ apt-get install emacspeak
         <div class="outline-text-3" id="text-11_2">
           <p>"Give someone a fish, and you have fed them for a
           meal. Teach them to fish and you have fed them for
-          life."&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&nbsp;&Atilde;&cent;&acirc;&sbquo;&not;&acirc;&bdquo;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&acirc;&euro;&brvbar;&Atilde;&sbquo;&Acirc;&iexcl;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Aring;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&dagger;&acirc;&euro;&trade;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&sbquo;&Acirc;&cent;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&Acirc;&iexcl;&Atilde;&fnof;&acirc;&euro;&scaron;&Atilde;&sbquo;&Acirc;&not;&Atilde;&fnof;&AElig;&rsquo;&Atilde;&cent;&acirc;&sbquo;&not;&Acirc;&brvbar;&Atilde;&fnof;&Acirc;&cent;&Atilde;&cent;&acirc;&euro;&scaron;&Acirc;&not;&Atilde;&hellip;&acirc;&euro;&oelig;Somebody
+          life."ÃƒÆ’Ã†â€™Ãƒâ€&nbsp;Ã¢â‚¬â„¢ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â‚¬Å¡Ã‚Â¬Ãƒâ€¦Ã‚Â¡ÃƒÆ’Ã¢â‚¬Å¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã†â€™Ãƒâ€šÃ‚Â¢ÃƒÆ’Ã‚Â¢ÃƒÂ¢Ã¢â€šÂ¬Ã…Â¡Ãƒâ€šÃ‚Â¬ÃƒÆ’Ã¢â‚¬Â¦ÃƒÂ¢Ã¢â€šÂ¬Ã…â€œSomebody
           very smart.</p>
 
           <p>Now that you have gotten your feet wet with Emacspeak,
